Updated deps in POM